editet basic info

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: LordHaliax
+  github: NickFyodorov
   instagram:
   linkedin:
   pinterest:
