ruthless mutilation of the site

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Nikita Fyodorov
 
 # Short bio or description (displayed in the header)
-description: A humble student
+description: Don't expect much
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://i.pinimg.com/736x/c2/dc/7d/c2dc7da0d3e1562b312d782e43324ed0--reyes.jpg
